--- a/main.css
+++ b/main.css
@@ -22,6 +22,30 @@ html,body{
     z-index: 2;
 }
 
+.sound{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 10%;
+    height: 10%;
+    z-index: 2;
+}
+
+.aud{
+    font-size: 60px;
+    opacity: 70%;
+    color: white;
+}
+
+.speaker{
+    display: none;
+}
+
+.btn-audio{
+    background: none;
+    border: none;
+}
+
 .title{
     position: absolute;
     top: 50%;
@@ -287,6 +311,16 @@ a:hover{
 }
 
 @media screen and (max-width: 500px) {
+
+    .audio{
+        width: 15%;
+        height: 15%;
+    }
+
+    .aud{
+        font-size: 70px;
+    }
+
     .nav-buttons{
         margin: 0;
         bottom: 10px;
@@ -456,9 +490,18 @@ a:hover{
 }
 
 @media screen and (min-width: 500px) and (max-width: 912px){
+   
+    .audio{
+        width: 15%;
+        height: 15%;
+    }
+
+    .aud{
+        font-size: 100px;
+    }
 
     .btn{
-        width: 30%;
+        width: 25%;
         margin: 0 2rem;
     }
 
