--- a/main.css
+++ b/main.css
@@ -48,33 +48,29 @@ html,body{
 
 .title{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
-    /* background-color: #343b23; */
+    /* background-color: rgba(0, 17, 255, 0.53); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 0;
 }
 
 h1{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     font-family: 'Cormorant Garamond', serif;
     font-size: 100px;
     text-align: center;
 }
 
 h2{
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     font-family: 'Mukta Vaani', sans-serif;
     font-size: 30px;
     text-align: center;
     font-weight: 100;
+    padding: 2rem 0;
 }
 
 strong{
@@ -84,79 +80,71 @@ strong{
 .huevos{
     position: absolute;
     top: 0%;
-    left: -10%;
+    left: -5%;
     width: 50vw;
     height: 100vh;
-    opacity: 0;
+    opacity: 1;
     display: none;
     /* background-color: #343b2322; */
-}
-
-.huevos h2{
-    top: 50%;
-    width: 90%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .huevos-back{
-    position: absolute;
-    left: 0%;
-    top: 35%;
     width: 80%;
     height: 30%;
-    background-color: #343b2379; 
+    background-color: #343b2379;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .oruga{
     position: absolute;
     top: 0%;
-    left: -10%;
+    left: -5%;
     width: 50vw;
     height: 100vh;
-    opacity: 0;
+    opacity: 1;
     display: none;
-    /* background-color: #343b2322;    */
-}
-
-.oruga h2{
-    top: 50%;
-    width: 90%;
+    /* background-color: #343b2322;     */
+    justify-content: center;
+    align-items: center;
 }
 
 .oruga-back{
-    position: absolute;
-    left: 0%;
-    top: 45%;
     width: 80%;
     height: 20%;
-    background-color: #343b2379; 
+    background-color: #343b2379;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .crisalida{
     position: absolute;
     top: 0%;
-    right: -15%;
+    right: -5%;
     width: 50vw;
     height: 100vh;
     opacity: 0;
-    display: none;
-    /* background-color: #343b2322;     */
-}
-
-.crisalida h2{
-    top: 50%;
-    width: 90%;
+    display: flex;
+    /* background-color: #343b2322;  */
+    justify-content: center;
+    align-items: center;
 }
 
 .crisalida-back{
-    position: absolute;
-    left: 0%;
-    top: 45%;
     width: 60%;
     height: 20%;
-    background-color: #343b2379; 
+    background-color: #343b2379;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .vuelo{
@@ -166,54 +154,46 @@ strong{
     width: 50vw;
     height: 100vh;
     opacity: 0;
-    display: none;
-    /* background-color: #343b2322;  */
-}
-
-.vuelo h2{
-    top: 50%;
-    width: 100%;
-    padding: 2rem;
+    display: flex;
+    /* background-color: #343b2322; */
+    justify-content: center;
+    align-items:flex-end;
 }
 
 .vuelo-back{
-    position: absolute;
-    left: 5%;
-    bottom: 15%;
     width: 90%;
     height: 30%;
-    background-color: #343b23df; 
+    background-color: #343b23df;
     border-radius: 20px;
-    
+    margin: 15% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .muerta{
     position: absolute;
-    bottom: -10%;
+    bottom: -5%;
     left: 0%;
     width: 100vw;
     height: 100vh;
     opacity: 0;
-    display: none;
+    display: flex;
     /* background-color: #343b2322;  */
-}
+    justify-content: center;
+    align-items: flex-end;
 
-.muerta h2{
-    top: 50%;
-    width: 100%;
-    padding: 2rem;
 }
 
 .muerta-back{
-    position: absolute;
-    left: 50%;
-    bottom: 15%;
-    transform: translate(-50%,0);
     width: 50%;
     height: 20%;
-    background-color: #343b2379; 
+    background-color: #343b2379;
     border-radius: 20px;
-    
+    margin: 5% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .final{
@@ -225,6 +205,9 @@ strong{
     opacity: 0;
     display: none;
     /* background-color: #343b2322;  */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .final h2{
@@ -234,14 +217,13 @@ strong{
 }
 
 .final-back{
-    position: absolute;
-    left: 10%;
-    top: 25%;
-    /* transform: translate(-50%,-50%); */
     width: 80%;
     height: 60%;
-    background-color: #343b23df; 
+    background-color: #343b23df;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 a{
@@ -335,57 +317,50 @@ a:hover{
         width: 100%;
         font-size: 70px;
     }
-    
-    h2{
-        position: absolute;
-        top: 75%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        font-family: 'Mukta Vaani', sans-serif;
-        font-size: 30px;
-        text-align: center;
-        font-weight: 100;
-    }
+
 
     .huevos{
-        top: 0%;
-        left: 0%;
-        width: 100vw;
+        left: 0;
+        width: 100%;
         height: 100vh;
+        display: none;
         /* background-color: #5a1fda66; */
+        justify-content: flex-end;
+        align-items: center;
     }
-    
+
     .huevos h2{
         font-size: 25px;
     }
-    
+
     .huevos-back{
-        left: 5%;
-        top: 60%;
         width: 90%;
         height: 30%;
+        margin: 20% 0;
     }
 
     .oruga{
         top: 0;
-        left: 0%;
+        left: 0;
         width: 100vw;
         height: 100vh;
         opacity: 0;
         display: none;
-        /* background-color: #5a1fda66;  */
+        /* background-color: #5a1fda66;   */
+        justify-content: center;
+        align-items: flex-start;
     }
-    
+
     .oruga h2{
         font-size: 25px;
+        padding: 0.5rem;
     }
-    
+
     .oruga-back{
-        left: 5%;
-        top: 12%;
         width: 90%;
         height: 20%;
         background-color: #343b23ed;
+        margin: 30% 0;
     }
 
     .crisalida{
@@ -396,17 +371,18 @@ a:hover{
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
+        justify-content: center;
+        align-items: flex-end;
     }
-    
+
     .crisalida h2{
         font-size: 25px;
     }
-    
+
     .crisalida-back{
-        left: 5%;
-        top: 60%;
         width: 90%;
         height: 15%;
+        margin: 40% 0;
     }
 
     .vuelo{
@@ -417,18 +393,19 @@ a:hover{
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
+        justify-content: center;
+        align-items: flex-end;
     }
-    
+
     .vuelo h2{
         font-size: 25px;
     }
-    
+
     .vuelo-back{
-        left: 5%;
-        top: 55%;
         width: 90%;
-        height: 35%;
+        height: 30%;
         background-color: #343b23df;
+        margin: 20% 0;
     }
 
     .muerta{
@@ -439,24 +416,22 @@ a:hover{
         opacity: 0;
         display: none;
         /* background-color: #2e233b62;  */
+        justify-content: center;
+        align-items: flex-end;
     }
-    
+
     .muerta h2{
         top: 50%;
         width: 100%;
         padding: 1rem;
     }
-    
+
     .muerta-back{
-        position: absolute;
-        left: 50%;
-        bottom: 10%;
-        transform: translate(-50%,0);
         width: 90%;
-        height: 40%;
-        background-color: #343b2379; 
+        height: 35%;
+        background-color: #343b2379;
         border-radius: 20px;
-        
+        margin: 20% 0;
     }
 
     .final{
@@ -467,16 +442,16 @@ a:hover{
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
+        justify-content: center;
+        align-items: center;
     }
-    
+
     .final h2{
         font-size: 25px;
         padding: 1rem;
     }
-    
+
     .final-back{
-        left: 5%;
-        top: 30%;
         width: 90%;
         height: 60%;
         background-color: #343b2379;
@@ -490,7 +465,7 @@ a:hover{
 }
 
 @media screen and (min-width: 500px) and (max-width: 912px){
-   
+
     .audio{
         width: 15%;
         height: 15%;
@@ -520,11 +495,11 @@ a:hover{
         height: 100vh;
         /* background-color: #5a1fda66;  */
     }
-    
+
     .huevos h2{
         font-size: 30px;
     }
-    
+
     .huevos-back{
         left: 10%;
         top: 65%;
@@ -541,11 +516,11 @@ a:hover{
         display: none;
         /* background-color: #5a1fda66;  */
     }
-    
+
     .oruga h2{
         font-size: 30px;
     }
-    
+
     .oruga-back{
         left: 5%;
         top: 10%;
@@ -563,11 +538,11 @@ a:hover{
         display: none;
         /* background-color: #5a1fda66; */
     }
-    
+
     .crisalida h2{
         font-size: 30px;
     }
-    
+
     .crisalida-back{
         left: 5%;
         top: 60%;
@@ -584,11 +559,11 @@ a:hover{
         display: none;
         /* background-color: #5a1fda66; */
     }
-    
+
     .vuelo h2{
         font-size: 30px;
     }
-    
+
     .vuelo-back{
         left: 5%;
         top: 73%;
@@ -606,14 +581,14 @@ a:hover{
         display: none;
         /* background-color: #2e233b62;  */
     }
-    
+
     .muerta h2{
         top: 50%;
         width: 100%;
         padding: 1rem;
         font-size: 30px;
     }
-    
+
     .muerta-back{
         position: absolute;
         left: 50%;
@@ -621,9 +596,9 @@ a:hover{
         transform: translate(-50%,0);
         width: 90%;
         height: 15%;
-        background-color: #343b2379; 
+        background-color: #343b2379;
         border-radius: 20px;
-        
+
     }
 
     .final{
@@ -635,12 +610,12 @@ a:hover{
         display: none;
         /* background-color: #5a1fda66; */
     }
-    
+
     .final h2{
         font-size: 30px;
         padding: 1rem;
     }
-    
+
     .final-back{
         left: 5%;
         top: 30%;
