--- a/main.css
+++ b/main.css
@@ -322,7 +322,7 @@ a:hover{
     .huevos{
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         display: none;
         /* background-color: #5a1fda66; */
         justify-content: flex-end;
@@ -342,8 +342,8 @@ a:hover{
     .oruga{
         top: 0;
         left: 0;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66;   */
@@ -366,8 +366,8 @@ a:hover{
     .crisalida{
         top: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
@@ -388,8 +388,8 @@ a:hover{
     .vuelo{
         top: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
@@ -411,8 +411,8 @@ a:hover{
     .muerta{
         bottom: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #2e233b62;  */
@@ -424,21 +424,22 @@ a:hover{
         top: 50%;
         width: 100%;
         padding: 1rem;
+        font-size: 25px;
     }
 
     .muerta-back{
         width: 90%;
-        height: 35%;
+        height: 25%;
         background-color: #343b2379;
         border-radius: 20px;
-        margin: 20% 0;
+        margin: 35% 0;
     }
 
     .final{
         top: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
