--- a/main.css
+++ b/main.css
@@ -494,139 +494,145 @@ a:hover{
     }
 
     .huevos{
-        top: 5%;
-        left: 0%;
-        width: 100vw;
-        height: 100vh;
-        /* background-color: #5a1fda66;  */
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: none;
+        opacity: 0;
+        /* background-color: #5a1fda66; */
+        justify-content: flex-end;
+        align-items: center;
     }
 
     .huevos h2{
-        font-size: 30px;
+        font-size: 35px;
+        margin: 1rem;
     }
 
     .huevos-back{
-        left: 10%;
-        top: 65%;
-        width: 80%;
+        width: 90%;
         height: 20%;
+        margin: 20% 0;
     }
 
     .oruga{
-        top: -5%;
-        left: 0%;
-        width: 100vw;
-        height: 100vh;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
-        /* background-color: #5a1fda66;  */
+        /* background-color: #5a1fda66;   */
+        justify-content: center;
+        align-items: flex-start;
     }
 
     .oruga h2{
-        font-size: 30px;
+        font-size: 35px;
+        margin: 1rem;
     }
 
     .oruga-back{
-        left: 5%;
-        top: 10%;
         width: 90%;
-        height: 20%;
+        height: 15%;
         background-color: #343b23ed;
+        margin: 30% 0;
     }
 
     .crisalida{
-        top: 5%;
+        top: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
+        justify-content: center;
+        align-items: flex-end;
     }
 
     .crisalida h2{
-        font-size: 30px;
+        font-size: 35px;
+        margin: 1rem;
     }
 
     .crisalida-back{
-        left: 5%;
-        top: 60%;
         width: 90%;
-        height: 20%;
+        height: 15%;
+        margin: 40% 0;
     }
 
     .vuelo{
-        top: 3%;
+        top: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
+        justify-content: center;
+        align-items: flex-end;
     }
 
     .vuelo h2{
-        font-size: 30px;
+        font-size: 35px;
+        margin: 1rem;
     }
 
     .vuelo-back{
-        left: 5%;
-        top: 73%;
         width: 90%;
         height: 20%;
         background-color: #343b23df;
+        margin: 20% 0;
+        padding: 0.5rem;
     }
 
     .muerta{
-        bottom: -10%;
+        bottom: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #2e233b62;  */
+        justify-content: center;
+        align-items: flex-end;
     }
 
     .muerta h2{
-        top: 50%;
-        width: 100%;
-        padding: 1rem;
-        font-size: 30px;
+        font-size: 35px;
+        margin: 1rem;
     }
 
     .muerta-back{
-        position: absolute;
-        left: 50%;
-        bottom: 25%;
-        transform: translate(-50%,0);
         width: 90%;
-        height: 15%;
+        height: 25%;
         background-color: #343b2379;
         border-radius: 20px;
-
+        margin: 35% 0;
     }
 
     .final{
-        top: 5%;
+        top: 0%;
         left: 0%;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         opacity: 0;
         display: none;
         /* background-color: #5a1fda66; */
+        justify-content: center;
+        align-items: center;
     }
 
     .final h2{
-        font-size: 30px;
-        padding: 1rem;
+        font-size: 35px;
+        margin: 1rem;
     }
 
     .final-back{
-        left: 5%;
-        top: 30%;
         width: 90%;
-        height: 35%;
-        background-color: #343b23b7;
+        height: 40%;
+        background-color: #343b2379;
     }
 
 }
