--- a/main.css
+++ b/main.css
@@ -321,6 +321,9 @@ a:hover{
         padding: 2rem;
     }
 
+    strong{
+      font-size: 25px;  
+    }
 
     .huevos{
         left: 0;
@@ -622,6 +625,7 @@ a:hover{
         /* background-color: #5a1fda66; */
         justify-content: center;
         align-items: center;
+        overflow: scroll;
     }
 
     .final h2{
